--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netease-cloud-uni",
+  "name": "uni-vue3-ts",
   "version": "0.0.1",
   "scripts": {
     "dev:app": "uni -p app",
@@ -45,9 +45,9 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3040820220424001",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3040820220424001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3040820220424001",
+    "pinia": "^2.0.13",
     "vue": "^3.2.33",
-    "vue-i18n": "^9.1.9",
-    "vuex": "^4.0.2"
+    "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
     "@dcloudio/types": "^2.6.4",
