--- a/package.json
+++ b/package.json
@@ -46,7 +46,12 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3040820220424001",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3040820220424001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3040820220424001",
+    "axios": "^0.21.1",
+    "axios-adapter-uniapp": "^0.1.3",
+    "axios-retry": "^3.2.5",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.0.13",
+    "qs": "^6.10.3",
     "vue": "^3.2.33",
     "vue-i18n": "^9.1.9"
   },
@@ -54,6 +59,7 @@
     "@dcloudio/types": "^2.6.4",
     "@dcloudio/uni-automator": "3.0.0-alpha-3040820220424001",
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3040820220424001",
+    "@dcloudio/uni-helper-json": "^1.0.13",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3040820220424001",
     "@ls-lint/ls-lint": "^1.11.0",
     "@types/node": "^17.0.30",
@@ -84,5 +90,9 @@
     "typescript": "^4.6.3",
     "vite": "^2.9.6",
     "vue-eslint-parser": "^8.3.0"
-  }
+  },
+  "broserslit": [
+    "android >= 4",
+    "ios >= 8"
+  ]
 }
