--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uni-vue3-ts",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
     "dev:app": "uni -p app",
     "dev:custom": "uni -p",
@@ -31,7 +31,10 @@
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
     "log": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\""
+    "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
+    "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
+    "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "lint:lint-staged": "lint-staged"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-alpha-3040820220424001",
@@ -56,6 +59,8 @@
     "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@dcloudio/types": "^2.6.4",
     "@dcloudio/uni-automator": "3.0.0-alpha-3040820220424001",
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3040820220424001",
@@ -72,12 +77,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "global": "^4.4.0",
+    "husky": "^7.0.4",
+    "is-ci": "^3.0.1",
+    "lint-staged": "^12.4.1",
     "postcss": "^8.4.13",
     "postcss-class-rename": "^1.0.1",
     "postcss-comment": "^2.0.0",
     "postcss-html": "^1.0.0",
     "postcss-import": "^14.1.0",
     "prettier": "^2.6.2",
+    "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
     "sass": "^1.51.0",
     "stylelint": "^14.8.1",
@@ -94,5 +103,32 @@
   "broserslit": [
     "android >= 4",
     "ios >= 8"
-  ]
+  ],
+  "engines": {
+    "node": "^12 || >=14"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
+      "prettier --write--parser json"
+    ],
+    "package.json": [
+      "prettier --write"
+    ],
+    "*.vue": [
+      "eslint --fix",
+      "prettier --write",
+      "stylelint --fix"
+    ],
+    "*.{scss,less,styl,html}": [
+      "stylelint --fix",
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
+  }
 }
