--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "autoprefixer": "^10.4.5",
+    "commitizen": "^4.2.4",
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^8.5.0",
