--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
     "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-    "lint:lint-staged": "lint-staged"
+    "lint:lint-staged": "lint-staged",
+    "prepare": "husky install",
+    "clean": "rimraf pnpm-lock.yaml && rimraf node_modules"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-alpha-3040820220424001",
@@ -61,13 +63,12 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
-    "@dcloudio/types": "^2.6.4",
+    "@dcloudio/types": "^3.3.2",
     "@dcloudio/uni-automator": "3.0.0-alpha-3040820220424001",
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3040820220424001",
     "@dcloudio/uni-helper-json": "^1.0.13",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3040820220424001",
-    "@ls-lint/ls-lint": "^1.11.0",
-    "@types/node": "^17.0.30",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "autoprefixer": "^10.4.5",
@@ -97,9 +98,10 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-order": "^5.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3",
+    "typescript": "^4.9.4",
     "vite": "^2.9.6",
-    "vue-eslint-parser": "^8.3.0"
+    "vue-eslint-parser": "^8.3.0",
+    "vue-tsc": "^1.0.24"
   },
   "broserslit": [
     "android >= 4",
