--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "stylelint-order": "^5.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.9.4",
+    "unocss": "^0.50.6",
+    "unocss-preset-weapp": "^0.5.2",
     "vite": "^2.9.6",
     "vue-eslint-parser": "^8.3.0",
     "vue-tsc": "^1.0.24"
@@ -111,27 +113,6 @@
     "node": "^12 || >=14"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
-      "prettier --write--parser json"
-    ],
-    "package.json": [
-      "prettier --write"
-    ],
-    "*.vue": [
-      "eslint --fix",
-      "prettier --write",
-      "stylelint --fix"
-    ],
-    "*.{scss,less,styl,html}": [
-      "stylelint --fix",
-      "prettier --write"
-    ],
-    "*.md": [
-      "prettier --write"
-    ]
+    "*.{vue,js,ts,jsx,tsx,md,json}": "eslint --fix"
   }
 }
